# system_dashboard

./: Cargo.toml  readme.md
module_scripts/: openocd.cfg  reset_usb  reset_usb.c  socket_to_uart.py  wb55_get_board_serial.sh  wb55_helper_functions.sh  wb55_install_ble.sh  wb55_install_firmware.sh  wb55_operation.sh  wb55_operation_interface.sh  wb55_verify_if_has_ble.sh
src/: main.rs  proc.rs
