[package]
name = "system_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.5.2", features = ["system"]}
iced_core = "0.6.1"
iced_native = "0.6.1"
iced_lazy = "0.2"
bytesize = "1.1.0"
