[package]
name = "system_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.5.2", features = ["canvas", "tokio", "system", "debug"]}
iced_core = "0.6.1"
iced_native = "0.6.1"
iced_lazy = "0.2"
plotters-iced = "0.4.1"
plotters={ version = "0.3.4", default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
chrono = "0.4.23"
